removed header text and only left logos when scren size is less than 650px by using windowSize state

--- a/src/index.css
+++ b/src/index.css
@@ -545,6 +545,7 @@ a {
     align-items: center;
   }
 
+  /*
   header {
     flex-direction: row;
   }
@@ -568,4 +569,5 @@ a {
   #main-header-title {
     font-size: 1rem;
   }
+*/
 }
